--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,6 +30,7 @@ on_success:
   - git config --global user.email $env:op_build_user_email
   - git config --global user.name $env:op_build_user
   - ps: Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
+  - git clone https://github.com/cetusfinance/qwack.git ../qwack
   - git checkout gh-pages
   - git rm -rf .
   - xcopy ..\output . /E
