--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,7 @@ on_success:
   - git rm -rf .
   - xcopy ..\output . /E
   # EDIT your domain name or remove if not using a custom domain
-  - echo cetus.io > CNAME
+  - echo qwack.io > CNAME
   # EDIT the origin of your repository - have to reset it here because AppVeyor pulls from SSH, but GitHub won't accept SSH pushes
   - git remote set-url origin https://github.com/cetusfinance/qwackdocs.git
   - git add -A
